# SkiNavIndexes

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  MEMORY.md  README.md  latest.json  opencode.jsonc
.github/workflows/: release-indexes.yml  update-resorts.yml
output/: resorts.json
queries/: winter_sports.overpassql
schemas/: resort-index.schema.json  resort.json
scripts/: normalize.py  validate.py
src/: cli.rs  main.rs  pipeline.rs
src/pipeline/: build.rs  fetch.rs  geo.rs  io.rs  model.rs  normalize.rs  output.rs  release.rs  tests.rs  validate.rs
src/ski_nav_indexes/: __init__.py  index.py
tasks/: findings.md  lessons.md  progress.md  task_plan.md  todo.md
tasks/lessons/: release-ownership.md
tests/: pipeline_structure.rs
